--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                                                        <img src="images\834722_facebook_icon.png" height="50" width="50" alt="facebook"> </a>
                                                     <a href="https://www.instagram.com" target="_blank" >
                                                        <img src="images\Instagram_icon.png.webp" height="50" width="50"></a>
+                                                       <a href="https://github.com/Abidrather36" target="_blank">
+                                                           <img src="images\github.png" height="50" width="50">
+                                                       </a>
                                                        <a href="https://www.linkedin.com/home" target="_blank">
                                                            <img src="images\107178_circle_linkedin_icon.png" height="50" width="50">
                                                        </a>
