--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                                                        </a>
                                                        <a href="https://www.linkedin.com/home" target="_blank">
                                                            <img src="images\107178_circle_linkedin_icon.png" height="50" width="50">
+                                                           <a href="twitter.com" target="_blank">
+                                                               <img src="images\twitter (2).png" height="50" width="50">
+                                                           </a>
                                                        </a>
                                                     </footer></center>
                                                 </footer>
