--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
                                                     <link href="images\Abstract-social-media-watercolor-icons-set.jpg" rel="icon">
                                                 
                                                     <style>
+                                                        h1{
+                                                            color:maroon;
+                                                        }
                                                         h1,h2{
                                                             text-align:center;
                                                         }
@@ -83,10 +86,9 @@
                                                             <p id="p"> "My name is Abid Naseer and I am a Junior Web Developer for Oswald Technologies.
                                                                 I am an accomplished coder and programmer, and I enjoy using my skills to contribute 
                                                                 to the exciting technological advances that happen every day at Oswald Tech.
-                                                                I graduated from the California Institute of Technology in 2016 with a Bachelor's
-                                                                Degree in Software Development. While in school, 
-                                                            I earned the 2015 Edmund Gains Award for my exemplary academic performance and leadership
-                                                                skills".</p>
+                                                                I graduated from the Iqbal Institute of Technology in 2019 with a Bachelor's
+                                                                Degree in Software Development. Right now im pursuing Msc.it from University Of Kashmir 
+                                                            ".</p>
                                                         </div>
                                                                 
                                                             </div>
@@ -126,8 +128,10 @@
                                                             </p>
                                                         </div>
                                                         <br><br>
+                                                        <center>
                                                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6612.163850942815!2d74.87082307136453!3d34.04176952243478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1892d46aaab11%3A0x4b3bdb3df55ee185!2sAthwajan%2C%20Srinagar%20191101!5e0!3m2!1sen!2sin!4v1645461963909!5m2!1sen!2sin"
-                                                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                                        width="50%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                                        </center>
                                                         <hr>
                                                         <center>
                                                         <footer>
