--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
                                                     <link href="images\Abstract-social-media-watercolor-icons-set.jpg" rel="icon">
                                                 
                                                     <style>
+                                                        a{
+                                                            text-decoration: none;
+                                                        }
+                                                        p{
+                                                            color:#251b19;
+                                                        }
                                                         h1{
                                                             color:maroon;
                                                         }
@@ -22,12 +28,16 @@
                                                             background-color:lightgrey ;
                                                             float:left;
                                                             margin:4px;
-                                                            border-radius:80%
+                                                            border-radius:80%;
+                                                            background-image: url('images/lappy.jpg');
+                                                            background-repeat:no-repeat;
+                                                            background-size: 100% 400px;
                                                         }
                                                         #p{
                                                             text-align:center;
                                                             margin:120px;
                                                             font-family:Verdana, Geneva, Tahoma, sans-serif;
+                                                            color:#251b19;
                                                             font-style:italic;
                                                             font-weight:bold;
                                                         }
