--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-<title>Prof</title>
+<title>Profile</title>
 <link rel="stylesheet" href="home.css">
 <link href="images\Abstract-social-media-watercolor-icons-set.jpg" rel="icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -52,7 +52,7 @@
         <div class="container" style="box-shadow:whitesmoke">
             <div class="media">
                 <div class="media-left" style="border-radius:1%">
-                    <img src="../images/samsunga50.jpg" class="media-object "  class="img-responsive" style="width:280px;height:290px;border-radius: 1%" alt="p" />
+                    <img src="images/samsunga50.jpg" class="media-object "  class="img-responsive" style="width:280px;height:290px;border-radius: 1%" alt="p" />
                 </div>
                 <div class="media-body">
                     <h2 class="media-heading" style="font-size:bold;font-weight:bold;color:#36686d">Hi Everybody, I am</h2>
